# email-triage-openenv

./: .gitignore  Dockerfile  README.md  app.py  baseline.py  baseline_agent.py  baseline_scores.json  client.py  email_dataset.py  environment.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_environment.py
server/: app.py  baseline_agent.py  email_dataset.py  environment.py  graders.py  models.py
tests/: test_api.py  test_graders.py
