[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage-openenv"
version = "1.0.0"
description = "A real-world customer support email triage OpenEnv environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "requests>=2.32.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
name = "email_triage_env"
version = "1.0.0"
description = "Real-world email triage environment"
entry_point = "server.app:app"
port = 7860

[tool.pytest.ini_options]
testpaths = ["tests"]